[package]
name = "blog-migrate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.4.1", features = ["parallel"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
clap = { version = "4.0.4", features = ["derive"] }
diesel = { version = "2.0.0", features = ["postgres"] }
matter = "0.1.0-alpha4"
serde = { version = "1.0.145", features = ["derive"] }
serde_yaml = "0.9.14"
slug = "0.1.4"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "fs"] }
