[package]
name = "blog-migrate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.0"
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
clap = { version = "4.1.10", features = ["derive"] }
diesel = { version = "2.0.3", features = ["postgres"] }
matter = "0.1.0-alpha4"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.157", features = ["derive"] }
serde_yaml = "0.9.19"
slug = "0.1.4"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread", "fs"] }
